migrate to new ui colors from awt inside scheme